--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Easy HTTP</title>
 </head>
 <body>
-    <script src="easy-http.js"></script>
+    <script src="easy-http-v2.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
